# co_ecs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  README_8md.html  access_8hpp.html  access_8hpp.js  access_8hpp_source.html  annotated.html  annotated_dup.js  archetype_8hpp.html  archetype_8hpp.js  archetype_8hpp_source.html  base__registry_8hpp.html  base__registry_8hpp.js  base__registry_8hpp_source.html  bits_8hpp.html  bits_8hpp.js  bits_8hpp_source.html  chunk_8hpp.html  chunk_8hpp.js  chunk_8hpp_source.html  classLinear.html  classco__ecs_1_1access__pattern__t-members.html  classco__ecs_1_1access__pattern__t.html  classco__ecs_1_1access__pattern__t.js  classco__ecs_1_1archetype-members.html  classco__ecs_1_1archetype.html  classco__ecs_1_1archetype.js  classco__ecs_1_1archetypes-members.html  classco__ecs_1_1archetypes.html  classco__ecs_1_1archetypes.js  classco__ecs_1_1base__registry-members.html  classco__ecs_1_1base__registry.html  classco__ecs_1_1base__registry.js  classco__ecs_1_1chunk-members.html  classco__ecs_1_1chunk.html  classco__ecs_1_1chunk.js  (+370 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .github.yml  build.yml  codecov.yml  cppcheck.yml  docs.yml  loc.yml
benchmarks/: CMakeLists.txt  bench.hpp
benchmarks/ecs/: registry.cpp
benchmarks/scheduler/: scheduler.cpp
cmake/: CodeCoverage.cmake
docs/: CMakeLists.txt  doxy.in  header.html
examples/: CMakeLists.txt
examples/app/: CMakeLists.txt  main.cpp
examples/ecs/: CMakeLists.txt  main.cpp
examples/example1/: CMakeLists.txt  main.cpp
examples/hello-registry/: CMakeLists.txt  main.cpp
examples/lua_sandbox/: CMakeLists.txt  main.cpp
examples/scheduler/: CMakeLists.txt  main.cpp
include/co_ecs/: archetype.hpp  base_registry.hpp  chunk.hpp  co_ecs.hpp  command.hpp  component.hpp  entity.hpp  entity_location.hpp  entity_ref.hpp  exceptions.hpp  macro.hpp  registry.hpp  schedule.hpp  scheduler.hpp  system.hpp  type_meta.hpp  view.hpp  view_arguments.hpp
include/co_ecs/detail/: bits.hpp  dynamic_bitset.hpp  handle.hpp  hash_map.hpp  hash_table.hpp  macro.hpp  sparse_map.hpp  sparse_table.hpp  thread_pool.hpp  type_traits.hpp  views.hpp  work_stealing_queue.hpp
include/co_ecs/detail/allocator/: linear_allocator.hpp  stack_allocator.hpp  temp_allocator.hpp
include/co_ecs/system/: access.hpp  named_system.hpp  schedule.hpp  stage.hpp  system.hpp
include/co_ecs/thread_pool/: parallel_for.hpp  task.hpp  thread_pool.hpp
include/cobalt/asl/: algorithm.hpp  alloc.hpp  allocator.hpp  bits.hpp  check.hpp  convert.hpp  defer.hpp  demangle.hpp  dynamic_bitset.hpp  family.hpp  format.hpp  graph.hpp  handle.hpp  handle_pool.hpp  hash_map.hpp  hash_set.hpp  hash_table.hpp  platform.hpp  ref_count.hpp  result.hpp  sparse_map.hpp  sparse_set.hpp  sparse_table.hpp  string_utils.hpp  toposort.hpp  type_name.hpp  type_traits.hpp  vector.hpp  zip.hpp
include/cobalt/core/: application.hpp  assert.hpp  assets.hpp  config.hpp  key.hpp  logging.hpp  mouse.hpp  pointer.hpp
include/cobalt/ecs/: archetype.hpp  chunk.hpp  commands.hpp  component.hpp  entity.hpp  entity_location.hpp  event.hpp  exceptions.hpp  hierarchy.hpp  noncopyable_any.hpp  registry.hpp  resource.hpp  runtime_view.hpp  scheduler.hpp  system.hpp  type_meta.hpp  typeless_box.hpp  view.hpp
include/cobalt/platform/: key_code.hpp  monitor.hpp  window.hpp
include/cobalt/render/: frame_buffer.hpp  layout.hpp  render_api.hpp  renderer.hpp  shader_compiler.hpp  types.hpp
include/cobalt/scripting/: lua_engine.hpp  script_component.hpp
scripts/: install-deps-ubuntu.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  concepts_0.js  defines_0.js  (+77 more)
src/: CMakeLists.txt
src/core/: application.cpp  engine.cpp  logging.cpp
src/platform/: window.cpp
src/platform/glfw/: glfw_monitor.cpp  glfw_monitor.hpp  glfw_window.cpp  glfw_window.hpp
src/render/: renderer.cpp  shader_compiler.cpp
src/render/opengl/: gl_buffer.cpp  gl_buffer.hpp  gl_frame_buffer.cpp  gl_frame_buffer.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp  gl_vao.cpp  gl_vao.hpp
src/render/vulkan/: vk.hpp  vk_device.cpp  vk_device.hpp  vk_renderer.cpp  vk_renderer.hpp
src/scripting/: lua_engine.cpp
tests/: CMakeLists.txt  components.hpp  test_allocator.cpp  test_command.cpp  test_component.cpp  test_container.cpp  test_ecs.cpp  test_entity.cpp  test_schedule.cpp
tests/asl/: test_algorithm.cpp  test_convert.cpp  test_defer.cpp  test_dynamic_bitset.cpp  test_family.cpp  test_graph.cpp  test_handle.cpp  test_hash_map.cpp  test_hash_set.cpp  test_sparse_map.cpp  test_sparse_set.cpp  test_string_utils.cpp  test_toposort.cpp  test_vector.cpp  test_zip.cpp
tests/co_ecs/: test_component.cpp  test_entity.cpp  test_registry.cpp
tests/co_ecs/detail/: test_dynamic_bitset.cpp  test_hash_map.cpp  test_sparse_map.cpp
tests/core/: test_assets.cpp  test_config.cpp  test_shader_compiler.cpp
tests/ecs/: test_archetype.cpp  test_command.cpp  test_component.cpp  test_hierarchy.cpp  test_registry.cpp  test_scheduler.cpp  test_system.cpp  test_view.cpp
tests/scripting/: test_lua_engine.cpp
tests/test_compile_failures/: CMakeLists.txt  test_entity_create_with_repeating_components.cpp
tests/test_shared/: CMakeLists.txt  components.hpp  test_lib.cpp  test_shared_lib.cpp
